prombench/manifests/prombench/benchmark/3c_promtail-bench_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail-pr-7214
  namespace: prombench-7214
  labels:
    app: promtail
    promtail: pr-7214
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
      promtail: pr-7214
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      namespace: prombench-7214
      labels:
        app: promtail
        promtail: pr-7214
    spec:
      serviceAccountName: promtail
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: prometheus
                operator: In
                values:
                - test-pr-7214
      containers:
        - name: promtail
          image: grafana/promtail:1.4.1
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
            - "-client.url=http://loki.default.svc.cluster.local:3100/api/prom/push"
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: run
              mountPath: /run/promtail
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker/containers
              readOnly: true
          ports:
            - containerPort: 3101
              name: http-metrics
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      nodeSelector:
        cloud.google.com/gke-nodepool: prometheus-7214
        isolation: prometheus
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      volumes:
        - name: config
          configMap:
            name: promtail-benchtest-config
        - name: run
          hostPath:
            path: /run/promtail
        - name: docker
          hostPath:
            path: /var/lib/docker/containers
        - name: pods
          hostPath:
            path: /var/log/pods
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail-v2-18-1
  namespace: prombench-7214
  labels:
    app: promtail
    promtail: v2-18-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
      promtail: v2-18-1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      namespace: prombench-7214
      labels:
        app: promtail
        promtail: v2-18-1
    spec:
      serviceAccountName: promtail
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: prometheus
                operator: In
                values:
                - test-v2-18-1
      containers:
        - name: promtail
          image: grafana/promtail:1.4.1
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
            - "-client.url=http://loki.default.svc.cluster.local:3100/api/prom/push"
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: run
              mountPath: /run/promtail
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker/containers
              readOnly: true
          ports:
            - containerPort: 3101
              name: http-metrics
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      nodeSelector:
        cloud.google.com/gke-nodepool: prometheus-7214
        isolation: prometheus
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      volumes:
        - name: config
          configMap:
            name: promtail-benchtest-config
        - name: run
          hostPath:
            path: /run/promtail
        - name: docker
          hostPath:
            path: /var/lib/docker/containers
        - name: pods
          hostPath:
            path: /var/log/pods
