prombench/manifests/prombench/benchmark/4_node-exporter.yaml
# On using Node affinity:
# 1. node-exporter is deployed on main-node ( DaemonSet )
# 2. node-exporter is deployed on nodes-7214 ( DaemonSet )
# 3. node-exporter is deployed on prometheus-7214 ( Deployment )
# node-exporter on prometheus-7214 is deployed after deploying prometheus to use podAffinity
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter-prometheus-test-v2-18-1
  namespace: prombench-7214
spec:
  selector:
    matchLabels:
      app: node-exporter
      node: test-v2-18-1
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      namespace: prombench-7214
      labels:
        app: node-exporter
        node: test-v2-18-1
      name: node-exporter
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: prometheus
                operator: In
                values:
                - test-v2-18-1
            topologyKey: cloud.google.com/gke-nodepool
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      hostNetwork: true
      hostPID: true
      nodeSelector:
        cloud.google.com/gke-nodepool: prometheus-7214
      containers:
      - image: quay.io/prometheus/node-exporter:v0.16.0
        args:
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
        volumeMounts:
        - name: proc
          readOnly:  true
          mountPath: /host/proc
        - name: sys
          readOnly: true
          mountPath: /host/sys
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter-prometheus-test-pr-7214
  namespace: prombench-7214
spec:
  selector:
    matchLabels:
      app: node-exporter
      node: test-pr-7214
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      namespace: prombench-7214
      labels:
        app: node-exporter
        node: test-pr-7214
      name: node-exporter
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: prometheus
                operator: In
                values:
                - test-pr-7214
            topologyKey: cloud.google.com/gke-nodepool
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      hostNetwork: true
      hostPID: true
      nodeSelector:
        cloud.google.com/gke-nodepool: prometheus-7214
      containers:
      - image: quay.io/prometheus/node-exporter:v0.16.0
        args:
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
        volumeMounts:
        - name: proc
          readOnly:  true
          mountPath: /host/proc
        - name: sys
          readOnly: true
          mountPath: /host/sys
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter-nodes
  namespace: prombench-7214
spec:
  selector:
    matchLabels:
      app: node-exporter
      node: web-server
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      namespace: prombench-7214
      labels:
        app: node-exporter
        node: web-server
      name: node-exporter
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      hostNetwork: true
      hostPID: true
      nodeSelector:
        cloud.google.com/gke-nodepool: nodes-7214
      containers:
      - image: quay.io/prometheus/node-exporter:v0.16.0
        args:
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
        volumeMounts:
        - name: proc
          readOnly:  true
          mountPath: /host/proc
        - name: sys
          readOnly: true
          mountPath: /host/sys
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: prombench-7214
  labels:
    app: node-exporter
    monitored: "true"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 80
    targetPort: scrape
    protocol: TCP
  selector:
    app: node-exporter
