prombench/manifests/prombench/benchmark/5_nginx-ingress-routes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: prombench-7214
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: prometheus-test-v2-18-1
          servicePort: 80
        path: /7214/prometheus-release
      - backend:
          serviceName: prometheus-test-pr-7214
          servicePort: 80
        path: /7214/prometheus-pr
